0.21 - not yet released
 - check if server is set, die if not
 - make name_to_id method public, as many things already use
   _name_to_id.

0.20 - Thu Jun 21 15:30:30 PDT 2007
 - added json_verbose flag to return json + wikitext in get_page()
 - fixed warning when an invalid workspace is used with get_homepage()
 - support setting a cookie for requests

0.19 - Sun Mar 11 17:05:49 PDT 2007
 - Added get_homepage()

0.18 - Tue Feb 20 10:35:31 PST 2007
 - Added get_tag()
 - Added put_workspacetag()
 - Added delete_workspacetag()
 - Fixed collection methods in scalar context
 - Too many version bumps since last release

0.15 - Mon Feb 12 17:16:27 PST 2007
 - Added method to return previous HTTP::Response object
 - Added support for breadcrumbs, backlinks, frontlinks
 - Added docs for accept()

0.12 - Thu Jan 25 11:14:35 PST 2007
0.11 - (failed to upload to cpan)
 - Added etag caching support to allow for collision detection
   - etags are cached on all get_page() calls, and sent to server
     in put_page() calls in the 'If-Match' header.  If the etags
     don't match, the server will return 412.
 - Added unit tests using mocked LWP packages.  
   - ~92X faster and they already have better coverage